kubeconfig/mongo/ocp-multi-cluster/mgmt/ui-mongo-client-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ui-mongo-client
  labels:
    name: ui-mongo-client
spec:
  type: ClusterIP
  ports:
    - name: mongo-port
      port: 80
      targetPort: 3000
  selector:
    name: ui-mongo-client
