kubeconfig/mongo/ocp-multi-cluster/mgmt/ui-mongo-client-route.yml
apiVersion: v1
kind: Route
metadata:
  name: ui-mongo-client
spec:
  to:
    kind: Service
    name: ui-mongo-client
