kubeconfig/mongo/ocp-multi-cluster/mgmt/ui-mongo-client-nwpolicy.yml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-ui-mongoclient-connections
spec:
  podSelector:
    matchLabels:
      app: mongoclient
  ingress:
  - ports:
    - protocol: TCP
      port: 3000
